--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.2",
-    "apollo-server-express": "^3.12.0"
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
